--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -55,3 +55,10 @@ div {
     margin-top: 2px;
     // border: 2px $info solid;
 }
+.event-list {
+    width: 60%;
+}
+.add-event-button {
+    // color: ;
+    flex: 25%;
+}
